--- a/index.html
+++ b/index.html
@@ -126,5 +126,7 @@
       </ul>
     </div>
     <script src="hello.js"></script>
+    //you can visit the repo on github at
+    https://github.com/nguyenhuongxuan95/SheCodesPlus-HW6//
   </body>
 </html>
