--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
       </ul>
     </div>
     <script src="hello.js"></script>
-    //you can visit the repo on github at
-    https://github.com/nguyenhuongxuan95/SheCodesPlus-HW6//
+    <p>
+      You can visit the repo on Github
+      <a href="https://github.com/nguyenhuongxuan95/SheCodesPlus-HW6">here.</a>
+    </p>
   </body>
 </html>
